<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_page_bg"
    android:padding="25dp">

    <TextView
        android:id="@+id/sign_in_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:textColor="#aaa"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/bubblegum_sans"
        android:gravity="center_horizontal"
        android:text="@string/albachat"
        android:textSize="75sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_page_title" />

    <EditText
        android:id="@+id/editTextSignUpEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_username"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/username_placeholder"
        android:inputType="textEmailAddress"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="#aaa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextSignUpAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_username"
        android:drawableLeft="@drawable/ic_username"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/age_placeholder"
        android:inputType="number"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:paddingRight="5dp"
        android:paddingBottom="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="#aaa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpEmail" />

    <LinearLayout
        android:id="@+id/linearLayoutGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpAge">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_child" />

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTextSignUpPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_password"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:paddingRight="5dp"
        android:paddingBottom="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="#aaa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutGender" />

    <!--    <EditText-->
    <!--        android:id="@+id/editTextPasswordRepeat"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="@android:color/transparent"-->
    <!--        android:drawableStart="@drawable/ic_password"-->
    <!--        android:drawableLeft="@drawable/ic_password"-->
    <!--        android:drawablePadding="20dp"-->
    <!--        android:ems="10"-->
    <!--        android:hint="@string/repeat_password_placeholder"-->
    <!--        android:inputType="textPassword"-->
    <!--        android:paddingStart="5dp"-->
    <!--        android:paddingLeft="5dp"-->
    <!--        android:paddingTop="15dp"-->
    <!--        android:paddingRight="5dp"-->
    <!--        android:paddingBottom="15dp"-->
    <!--        android:textColor="@android:color/white"-->
    <!--        android:textColorHint="#aaa"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpPassword" />-->


    <!--    <EditText-->
    <!--        android:id="@+id/editTextTextPersonName2"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="@android:color/transparent"-->
    <!--        android:drawableStart="@drawable/ic_cake"-->
    <!--        android:drawableLeft="@drawable/ic_cake"-->
    <!--        android:drawablePadding="20dp"-->
    <!--        android:ems="10"-->
    <!--        android:hint="@string/age_placeholder"-->
    <!--        android:inputType="number"-->
    <!--        android:paddingStart="5dp"-->
    <!--        android:paddingLeft="5dp"-->
    <!--        android:paddingTop="15dp"-->
    <!--        android:paddingRight="5dp"-->
    <!--        android:paddingBottom="15dp"-->
    <!--        android:textColor="@android:color/white"-->
    <!--        android:textColorHint="#aaa"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />-->

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#71E9D6"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/already_have_an_account"
        android:textColor="#ccc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sign_up_text_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_up_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="50dp"
        android:text="@string/sign_in_underlined"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <ProgressBar
        android:id="@+id/signUpProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <EditText-->
    <!--        android:id="@+id/editTextTextPersonName3"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="@android:color/transparent"-->
    <!--        android:drawableStart="@drawable/ic_child"-->
    <!--        android:drawableLeft="@drawable/ic_child"-->
    <!--        android:drawablePadding="20dp"-->
    <!--        android:ems="10"-->
    <!--        android:hint="@string/gender_placeholder"-->
    <!--        android:inputType="textCapWords"-->
    <!--        android:paddingStart="5dp"-->
    <!--        android:paddingLeft="5dp"-->
    <!--        android:paddingTop="15dp"-->
    <!--        android:paddingRight="5dp"-->
    <!--        android:paddingBottom="15dp"-->
    <!--        android:textColor="@android:color/white"-->
    <!--        android:textColorHint="#aaa"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />-->
</androidx.constraintlayout.widget.ConstraintLayout>